Fix some thread cleanup issues that can cause crashes or DCHECKs.

OpenVR and Oculus devices may be destroyed before the render loop is
created.  If this happens we may crash because we call render_loop_->IsRunning().

Next, if we don't call render_loop_->Stop(), the render_loop_'s bindings will be
destroyed on the main thread rather than the render loop thread.

BUG=868072

Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ibf12af3c38cfa8ed8edf1aebe431a3606476bba7
Reviewed-on: https://chromium-review.googlesource.com/1151952
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578455}
Former-commit-id: 8bd173472a9d6f46bd465633318d24ac4d4534de